k8/ingress.yaml
# TODO is an ingress necessary if you have a service exposing the pod?
# TODO read more into ingress controllers
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: app-ingress
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-api
                port:
                  number: 8000
